--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -9,18 +9,18 @@
         estetykę z funkcjonalnością w spójną i zachwycającą całość
       </div>
       <div class="row col-12 py-4 justify-content-center">
-        <div class="col-12 col-md-6 col-xl-4 py-3">
+        <div class="col-12 col-md-6 col-xl-4 py-3 pointer" [routerLink]="portfolioPath">
           <div class="img-preview-container">
             <img class="img-preview" ngSrc="portfolio-preview/2.avif" fill />
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
-          <div class="img-preview-container">
+          <div class="img-preview-container pointer" [routerLink]="portfolioPath">
             <img class="img-preview" ngSrc="portfolio-preview/1.avif" fill />
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
-          <div class="img-preview-container">
+          <div class="img-preview-container pointer" [routerLink]="portfolioPath">
             <img class="img-preview" ngSrc="portfolio-preview/3.avif" fill />
           </div>
         </div>
