--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row d-flex py-5 justify-content-center g-0">
+    <div class="row d-flex py-5 px-3 px-md-0 g-0 justify-content-center">
       <div class="title pt-5 pb-3">mgr inż. arch. Simona Lorenc</div>
       <div class="pb-3 caption text-container">
         <div>
