--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -4,7 +4,7 @@
     <div class="text-center pt-5 header-title">Oferta</div>
   </div>
   <div class="container g-0">
-    <div class="row pt-4 pb-5 d-flex">
+    <div class="row pt-4 pb-5 g-0 d-flex">
       <div class="col-12 col-md-6 px-4 border-right">
         <div class="text-center py-4 subtitle">Projekt koncepcyjny</div>
         <div class="caption">
