--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,7 +4,7 @@
     <div class="text-center pt-5 header-title">Projekty</div>
   </div>
   <div class="container g-0">
-    <div class="row py-4 justify-content-between">
+    <div class="row py-4 gx-0 gx-md-4 justify-content-between">
       <div
         *ngFor="let project of projects"
         class="col-12 col-md-6 col-xl-4 py-3"
