--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         src="header/short_logo.svg"
         class="p-3 logo pointer"
         [routerLink]="mainPath"
-        alt="logo"
+        alt="logo sl concept"
       />
     </div>
     <div
