--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -5,6 +5,7 @@
         <img
           class="img-preview"
           ngSrc="offer-preview/offer-preview.avif"
+          alt="Nowoczesna kuchnia vintage z drewnianą wyspą kuchenną, eleganckimi lampami, czarnymi hookerami i dwudrzwiową lodówką"
           fill
         />
       </div>
