--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid g-0 d-flex justify-content-center">
-  <img class="main-image" ngSrc="home/main-photo.avif" fill priority />
+  <img class="main-image" ngSrc="home/main-photo.avif" alt="Elegancki, jasny,nowoczesny salon z aneksem kuchennym z szarym narożnikiem, drewnianą wyspą i okrągłym białym stołem" fill priority />
   <div class="container d-flex flex-column justify-content-end">
     <div class="row mb-5 justify-content-center">
       <div class="col-10 col-md-7">
-        <img src="home/logo2.svg" class="logo" alt="logo" />
+        <img src="home/logo2.svg" class="logo sl concept" alt="logo" />
         <div class="mt-4 title img-text-shaddow">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
         </div>
