--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -11,17 +11,17 @@
       <div class="row col-12 py-4 justify-content-center">
         <div class="col-12 col-md-6 col-xl-4 py-3 pointer" [routerLink]="portfolioPath">
           <div class="img-preview-container">
-            <img class="img-preview" ngSrc="portfolio-preview/2.avif" fill />
+            <img class="img-preview" ngSrc="portfolio-preview/2.avif" alt="Stylowy salon vintage z żółtym narożnikiem, meblami nawiązującymi do prl, panelem ściennym i kinkietami" fill />
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="img-preview-container pointer" [routerLink]="portfolioPath">
-            <img class="img-preview" ngSrc="portfolio-preview/1.avif" fill />
+            <img class="img-preview" ngSrc="portfolio-preview/1.avif" alt="Nowoczesna kuchnia vintage z czarnymi oraz ciemnymi zielonymi szafkami, białymi płytkami cegiełkami, drewnianym stołem i wiklinowymi krzesłami" fill />
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="img-preview-container pointer" [routerLink]="portfolioPath">
-            <img class="img-preview" ngSrc="portfolio-preview/3.avif" fill />
+            <img class="img-preview" ngSrc="portfolio-preview/3.avif" alt="Jasna, nowoczesna łazienka w odcieniach beżu z drewnianymi elementami, ryflowanymi płytkami, owalnym lustrem, kinkietami kulami oraz płytkami lastryko" fill />
           </div>
         </div>
       </div>
