--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -16,7 +16,7 @@
           <img
             [ngSrc]="project.basePath + project.mainImage"
             class="img-preview"
-            [alt]="project.title"
+            [alt]="project.mainImageAlt"
             fill
           />
           <div class="overlay">
