--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid g-0">
   <div class="img-header-container">
-    <img class="img-header" ngSrc="offer/offer.avif" alt="Nowoczesna sypialnia z dużym łóżkiem z szarym wezgłowiem, wiszącymi lampami kulami i drewnianymi lamelami." fill />
+    <img class="img-header" ngSrc="offer/offer.avif" alt="Nowoczesna sypialnia z dużym łóżkiem z szarym wezgłowiem, wiszącymi lampami kulami i drewnianymi lamelami" fill />
     <div class="text-center pt-5 header-title">Oferta</div>
   </div>
   <div class="container g-0">
