--- a/src/app/portfolio-detail/portfolio-detail.component.html
+++ b/src/app/portfolio-detail/portfolio-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row pt-5 justify-content-center">
+    <div class="row pt-5 g-0 justify-content-center">
       <div class="pt-5">
         <div class="text-center title">{{ title }}</div>
       </div>
