--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,9 +3,12 @@
 .container-fluid {
   height: 100vh;
   color: global.$background-light;
+  overflow: hidden;
+  position: relative;
 }
 
 .main-image {
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
