--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,7 +19,7 @@
       >
     </div>
     <div
-      class="d-flex flex-column container-border px-5 py-3 mx-5 mx-md-0 align-items-end"
+      class="d-flex flex-column privacy-text container-border py-3 mx-5 mx-md-0 align-items-end"
     >
       <div>&copy; Copyright 2025 Simona Lorenc Concept</div>
       <div
