--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -61,3 +61,9 @@ a:hover {
 .contact-name {
   font-weight: 500;
 }
+
+.privacy-text {
+  font-size: 0.8rem;
+  line-height: 1rem;
+  font-weight: 300;
+}
