--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,16 +58,9 @@ body {
   cursor: pointer;
 }
 
-.section-gradient {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30px;
-  background: linear-gradient(
-    360deg,
-    rgba(0, 0, 0, 0.15) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+.pointer-scale {
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
 
 .img-preview-container {
@@ -88,7 +81,7 @@ body {
 
 .img-header-container {
   position: relative;
-  height: 60vh;
+  height: 52.5vh;
 }
 
 .img-header {
@@ -140,5 +133,12 @@ button:hover {
 @media (max-width: 767.98px) {
   html {
     font-size: 13px;
+  }
+}
+
+@media (min-width: 768px) {
+  /* For large screens */
+  .pointer-scale:hover {
+    transform: scale(1.015);
   }
 }
