--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
       <img src="header/logo.svg" class="py-3 logo" alt="logo sl concept" />
       <div class="contact-name pt-2">Simona Lorenc Concept</div>
       <a class="caption pt-1" [href]="mailToLink"
-        >e-mail: slorenc.soncept&#64;gmail.com</a
+        >e-mail: slorenc.concept&#64;gmail.com</a
       >
       <a class="caption pt-1" [href]="'tel:+48793733350'"
         >tel.: +48 793 733 350</a
