Update about me image

--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row g-0 py-5 d-flex justify-content-center">
-      <div class="col-md-6 col-12 order-md-1 order-2 p-5 pb-0 ps-5 ps-md-0">
+    <div class="row section-container g-0 py-5 d-flex justify-content-center">
+      <div class="col-md-6 col-12 order-md-1 order-2 pt-0 pb-0 pt-5 px-5 ps-md-0 d-flex flex-column align-items-center justify-content-center">
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
         <div class="pb-3 caption text-justify">
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="col-md-6 col-12 order-md-2 order-1 img-preview-container">
-        <img class="img-preview" ngSrc="about-me/about-me.avif" alt="Minimalistyczny projekt wnętrza salonu z zieloną sofą, drewnianym stołem i czarnymi krzesłami" fill />
+        <img class="img-about-me" ngSrc="about-me/simona_lorenc.avif" alt="Minimalistyczny projekt wnętrza salonu z zieloną sofą, drewnianym stołem i czarnymi krzesłami" fill />
       </div>
     </div>
   </div>
