--- a/src/app/about-me-preview/about-me-preview.component.scss
+++ b/src/app/about-me-preview/about-me-preview.component.scss
@@ -8,3 +8,10 @@
 .container {
   border-top: 1px solid global.$background-primary;
 }
+
+.img-about-me {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
