--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row g-0 py-5 d-flex justify-content-center">
+    <div class="row section-container g-0 py-5 d-flex justify-content-center">
       <div class="col-md-6 col-12 pb-5 img-preview-container">
         <img class="img-preview" ngSrc="contact/contact-preview.avif" alt="Stylowe wnętrze vintage z żółtą sofą, drewnianą wyspą kuchenną i eleganckimi lampami" fill />
       </div>
-      <div class="col-md-6 col-12 p-5 pb-0">
+      <div class="col-md-6 col-12 px-5 pt-md-0 pt-5 d-flex flex-column align-items-center justify-content-center">
         <div class="title pb-3">Kontakt</div>
         <div class="pb-5 caption">
           Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z
