--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row g-0 py-5">
+    <div class="row section-container g-0 py-5">
       <div class="col-12 col-md-6 img-preview-container">
         <img
           class="img-preview"
@@ -9,7 +9,7 @@
           fill
         />
       </div>
-      <div class="col-12 col-md-6 p-5 pb-0">
+      <div class="col-12 col-md-6 px-5 pt-md-0 pt-5 d-flex flex-column align-items-center justify-content-center">
         <div class="title pb-3">Oferta</div>
         <div class="pb-3 caption">
           Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza.
@@ -20,7 +20,7 @@
           nowoczesnego czy klasycznego - znajdę rozwiązanie, które najlepiej
           odpowiada Twoim potrzebom i marzeniom.
         </div>
-        <div class="d-flex flex-column align-items-center">
+        <div class="d-flex pt-3 flex-column align-items-center">
           <button [routerLink]="[offerPath]">Poznaj ofertę</button>
         </div>
       </div>
