--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,12 +11,20 @@
       <a class="caption pt-1" [href]="'tel:+48793733350'"
         >tel.: +48 793 733 350</a
       >
-      <a
-        class="caption pt-1"
+      <div>
+        <a
+        class="caption pt-1 pe-3"
         [href]="'https://www.instagram.com/slorenc.concept/'"
         target="_blank"
-        >instagram</a
+        ><img src="footer/instagram-icon.svg" class="py-3 instagram" alt="instagram sl concept"/></a
       >
+        <a
+        class="caption pt-1"
+        [href]="'https://www.facebook.com/profile.php?id=61571850118950'"
+        target="_blank"
+        ><img src="footer/facebook-icon.svg" class="py-3 instagram" alt="instagram sl concept"/></a
+      >
+      </div>
     </div>
     <div
       class="d-flex flex-column privacy-text container-border py-3 mx-5 mx-md-0 align-items-end"
