--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="col-md-6 col-12 order-md-2 order-1 img-preview-container">
-        <img class="img-about-me" ngSrc="about-me/simona_lorenc.avif" alt="Minimalistyczny projekt wnętrza salonu z zieloną sofą, drewnianym stołem i czarnymi krzesłami" fill />
+        <img class="img-about-me" ngSrc="about-me/simona_lorenc.avif" alt="Architekt wnętrz Simona Lorenc" fill />
       </div>
     </div>
   </div>
