--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,28 +1,41 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row d-flex py-5 px-3 px-md-0 g-0 justify-content-center">
-      <div class="title pt-5 pb-3">mgr inż. arch. Simona Lorenc</div>
-      <div class="pb-3 caption text-container">
-        <div>
-          Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
-          doświadczenie zdobywałam, pracując dla polskich i zagranicznych
-          pracowni architektonicznych. Moim celem jest tworzenie przestrzeni,
-          które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie
-          funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane
-          rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga
-          między praktycznością a estetyką to fundament każdego projektu.
+    <div class="row d-flex py-5 px-3 px-md-0 g-0 justify-content-center text-justify">
+      <div class="pt-5 row g-0">
+        <div class="col-xl-5 col-md-6 mt-3 caption">
+          <div class="title pb-3">mgr inż. arch. Simona Lorenc</div>
+          <div>
+            Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
+            doświadczenie zdobywałam, pracując dla polskich i zagranicznych
+            pracowni architektonicznych. Moim celem jest tworzenie przestrzeni,
+            które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie
+            funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane
+            rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga
+            między praktycznością a estetyką to fundament każdego projektu.
+          </div>
+          <div class="py-4 subtitle">W czym mogę Ci pomóc?</div>
+          <div>
+            Projektowanie wnętrz jest moją pasją, a moja praca cechuje się
+            sumiennością, kreatywnością i ambicją. Tworzę przestrzenie, które są
+            nie tylko piękne i praktyczne, ale także spójne i idealnie dopasowane
+            do oczekiwań Klienta. Każdy element wnętrza, który projektuję, stanowi
+            integralną część harmonijnej całości. Podstawą udanej współpracy jest
+            dla mnie dobra komunikacja i wzajemne zrozumienie. Swoje usługi
+            kieruję do osób, które doceniają wyjątkowy design i oryginalne
+            rozwiązania.
+          </div>
         </div>
-        <div class="py-4 subtitle">W czym mogę Ci pomóc?</div>
-        <div>
-          Projektowanie wnętrz jest moją pasją, a moja praca cechuje się
-          sumiennością, kreatywnością i ambicją. Tworzę przestrzenie, które są
-          nie tylko piękne i praktyczne, ale także spójne i idealnie dopasowane
-          do oczekiwań Klienta. Każdy element wnętrza, który projektuję, stanowi
-          integralną część harmonijnej całości. Podstawą udanej współpracy jest
-          dla mnie dobra komunikacja i wzajemne zrozumienie. Swoje usługi
-          kieruję do osób, które doceniają wyjątkowy design i oryginalne
-          rozwiązania.
+        <div class="col-md-1 col-2"></div>
+        <div class="col-xl-3 col-md-4 col-8 mt-4 img-preview-container">
+          <img
+            class="img-preview"
+            ngSrc="about-me/simona_lorenc.avif"
+            alt="Architekt wnętrz Simona Lorenc"
+            fill
+          />
         </div>
+      </div>
+      <div class="pb-3 caption">
         <div class="py-4 subtitle">Jak pracuję?</div>
         <div>
           Każdy projekt zaczynam od rozmowy z Klientem - zadaję dużo
