--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -21,7 +21,9 @@
           odpowiada Twoim potrzebom i marzeniom.
         </div>
         <div class="d-flex pt-3 flex-column align-items-center">
-          <button [routerLink]="[offerPath]">Poznaj ofertę</button>
+          <a [routerLink]="[offerPath]">
+            <button>Poznaj ofertę</button>
+          </a>
         </div>
       </div>
     </div>
