--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,13 @@
 <nav class="navbar" [@transparentBackground]="isTransparent ? 'true' : 'false'">
   <div class="container-fluid g-0 d-flex justify-content-between caption">
     <div class="d-flex align-items-center logo-container">
-      <img
-        src="header/short_logo.svg"
-        class="p-3 logo pointer"
-        [routerLink]="mainPath"
-        alt="logo sl concept"
-      />
+      <a [routerLink]="mainPath">
+        <img
+          src="header/short_logo.svg"
+          class="p-3 logo pointer"
+          alt="logo sl concept"
+        />
+      </a>
     </div>
     <div
       class="d-flex d-lg-none me-2 pointer icon-menu"
