--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="container g-0 d-flex flex-column justify-content-between">
     <div class="row p-5 g-0 d-flex justify-content-center text-center">
       <div class="title pb-3">Skontaktuj się ze mną</div>
-      <img src="header/logo.svg" class="py-3 logo" alt="logo sl concept" />
+      <img src="home/logo.svg" class="py-3 logo" alt="logo sl concept" />
       <div class="contact-name pt-2">Simona Lorenc Concept</div>
       <a class="caption pt-1" [href]="mailToLink"
         >e-mail: slorenc.concept&#64;gmail.com</a
