--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="container d-flex flex-column justify-content-end">
     <div class="row mb-5 justify-content-center">
       <div class="col-10 col-md-7 mb-5 mb-md-0">
-        <img src="home/logo2.svg" class="logo" alt="logo sl concept" />
+        <img src="home/logo.svg" class="logo" alt="logo sl concept" />
         <div class="mt-4 title img-text-shaddow">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
         </div>
