--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,29 +1,44 @@
 <div class="container-fluid g-0">
-  <img class="image" ngSrc="footer/footer-background.avif" alt="Elegancki, jasny, nowoczesny salon modern classic z szarym narożnikiem, okrągłym białym stołem i parkietem w kształcie jodełki" fill />
+  <img
+    class="image"
+    ngSrc="footer/footer-background.avif"
+    alt="Elegancki, jasny, nowoczesny salon modern classic z szarym narożnikiem, okrągłym białym stołem i parkietem w kształcie jodełki"
+    fill
+  />
   <div class="container g-0 d-flex flex-column justify-content-between">
     <div class="row p-5 g-0 d-flex justify-content-center text-center">
-      <div class="title pb-3">Skontaktuj się ze mną</div>
+      <div class="pb-3">
+        <h2 class="title m-0">Skontaktuj się ze mną</h2>
+      </div>
       <img src="home/logo.svg" class="py-3 logo" alt="logo sl concept" />
-      <div class="contact-name pt-2">Simona Lorenc Concept</div>
-      <a class="caption pt-1" [href]="mailToLink"
-        >e-mail: slorenc.concept&#64;gmail.com</a
+      <div class="pt-2">
+        <h3 class="contact-name m-0">Simona Lorenc Concept</h3>
+      </div>
+      <a class="pt-1" [href]="mailToLink">
+        <h3 class="caption m-0">e-mail: slorenc.concept&#64;gmail.com</h3></a
       >
-      <a class="caption pt-1" [href]="'tel:+48793733350'"
-        >tel.: +48 793 733 350</a
+      <a class="pt-1" [href]="'tel:+48793733350'">
+        <h3 class="caption m-0">tel.: +48 793 733 350</h3></a
       >
       <div>
         <a
-        class="caption pt-1 pe-3"
-        [href]="'https://www.instagram.com/slorenc.concept/'"
-        target="_blank"
-        ><img src="footer/instagram-icon.svg" class="py-3 instagram" alt="instagram sl concept"/></a
-      >
+          class="caption pt-1 pe-3"
+          [href]="'https://www.instagram.com/slorenc.concept/'"
+          target="_blank"
+          ><img
+            src="footer/instagram-icon.svg"
+            class="py-3 instagram"
+            alt="instagram sl concept"
+        /></a>
         <a
-        class="caption pt-1"
-        [href]="'https://www.facebook.com/profile.php?id=61571850118950'"
-        target="_blank"
-        ><img src="footer/facebook-icon.svg" class="py-3 instagram" alt="instagram sl concept"/></a
-      >
+          class="caption pt-1"
+          [href]="'https://www.facebook.com/profile.php?id=61571850118950'"
+          target="_blank"
+          ><img
+            src="footer/facebook-icon.svg"
+            class="py-3 instagram"
+            alt="instagram sl concept"
+        /></a>
       </div>
     </div>
     <div
