--- a/src/app/opinions/opinions.component.html
+++ b/src/app/opinions/opinions.component.html
@@ -1,38 +1,40 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
     <div class="p-5 ps-md-0 pe-md-0 d-flex flex-column align-items-center">
-      <div class="title">Opinie</div>
+      <div>
+        <h2 class="title m-0">Opinie</h2>
+      </div>
       <div class="row py-4 d-flex justify-content-center caption">
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
-            <div class="italic">
+            <h3 class="italic m-0">
               "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
               Projektantka doskonale połączyła nasze odmienne style i stworzyła
               wnętrza, w których oboje czujemy się świetnie. Proces
               projektowania był bezstresowy, a efekt - wyjątkowy. Polecamy z
               całego serca!"
-            </div>
-            <div>Agnieszka i Tomasz R., Mielec</div>
+            </h3>
+            <h3 class="caption m-0">Agnieszka i Tomasz R., Mielec</h3>
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
-            <div class="italic">
+            <h3 class="italic m-0">
               "Współpraca była czystą przyjemnością! Nasze mieszkanie w końcu
               wygląda tak, jak sobie wymarzyliśmy - piękne, przytulne i
               funkcjonalne. Serdecznie polecamy!"
-            </div>
-            <div>Katarzyna i Marcin, Kraków</div>
+            </h3>
+            <h3 class="caption m-0">Katarzyna i Marcin, Kraków</h3>
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
-            <div class="italic">
+            <h3 class="italic m-0">
               "Każdy szczegół został perfekcyjnie dopracowany. Wnętrze jest nie
               tylko estetyczne, ale również niezwykle praktyczne. Efekt końcowy
               przerósł oczekiwania!"
-            </div>
-            <div>Anna P., Mielec</div>
+            </h3>
+            <h3 class="caption m-0">Anna P., Mielec</h3>
           </div>
         </div>
       </div>
