--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid g-0">
   <div class="img-header-container">
     <img class="img-header" ngSrc="portfolio-preview/1.avif" fill />
-    <div class="text-center pt-5 header-title">Projekty</div>
+    <div class="text-center pt-5">
+      <h1 class="header-title">Projekty</h1>
+    </div>
   </div>
   <div class="container g-0">
     <div class="row py-4 gx-0 gx-md-4 justify-content-between">
@@ -18,7 +20,7 @@
               fill
             />
             <div class="overlay">
-              <div class="overlay-text">{{ project.title }}</div>
+              <h3 class="overlay-text">{{ project.title }}</h3>
             </div>
           </div>
         </a>
