--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -26,6 +26,7 @@
   padding: 0.5rem;
   transform: translateY(25%);
   transition: transform 0.3s ease-in-out;
+  font-weight: 400;
 }
 
 .img-preview-container:hover .overlay {
