--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -4,16 +4,23 @@
       <div
         class="col-md-6 col-12 order-md-1 order-2 pt-0 pb-0 pt-5 px-5 ps-md-0 d-flex flex-column align-items-center justify-content-center"
       >
-        <div class="title pb-3">O mnie</div>
-        <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
-        <div class="pb-3 caption text-justify">
-          Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
-          doświadczenie zdobywałam, pracując dla polskich i zagranicznych
-          pracowni architektonicznych. Moim celem jest tworzenie przestrzeni,
-          które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie
-          funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane
-          rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga
-          między praktycznością a estetyką to fundament każdego projektu.<br /><br />
+        <div class="pb-3">
+          <h2 class="title m-0">O mnie</h2>
+        </div>
+        <div class="pb-3">
+          <h2 class="subtitle m-0">mgr inż. arch. Simona Lorenc</h2>
+        </div>
+        <div class="pb-3 text-justify">
+          <h3 class="caption m-0">
+            Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
+            doświadczenie zdobywałam, pracując dla polskich i zagranicznych
+            pracowni architektonicznych. Moim celem jest tworzenie przestrzeni,
+            które w pełni wykorzystują dostępne miejsce, zapewniając
+            jednocześnie funkcjonalność. Wierzę, że kluczem do udanego projektu
+            są przemyślane rozwiązania, które odpowiadają na potrzeby
+            użytkowników, a równowaga między praktycznością a estetyką to
+            fundament każdego projektu.<br /><br />
+          </h3>
         </div>
         <div class="d-flex flex-column align-items-center">
           <a [routerLink]="aboutMePath">
