--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -2,14 +2,25 @@
   <div class="container g-0">
     <div class="row section-container g-0 py-5 d-flex justify-content-center">
       <div class="col-md-6 col-12 pb-5 img-preview-container">
-        <img class="img-preview" ngSrc="contact/contact-preview.avif" alt="Stylowe wnętrze vintage z żółtą sofą, drewnianą wyspą kuchenną i eleganckimi lampami" fill />
+        <img
+          class="img-preview"
+          ngSrc="contact/contact-preview.avif"
+          alt="Stylowe wnętrze vintage z żółtą sofą, drewnianą wyspą kuchenną i eleganckimi lampami"
+          fill
+        />
       </div>
-      <div class="col-md-6 col-12 px-5 pt-md-0 pt-5 d-flex flex-column align-items-center justify-content-center">
-        <div class="title pb-3">Kontakt</div>
-        <div class="pb-5 caption">
-          Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z
-          Krakowa, Mielca lub okolic, chętnie się spotkam i poznam Twoje
-          oczekiwania.
+      <div
+        class="col-md-6 col-12 px-5 pt-md-0 pt-5 d-flex flex-column align-items-center justify-content-center"
+      >
+        <div class="pb-3">
+          <h2 class="title m-0">Kontakt</h2>
+        </div>
+        <div class="pb-5 text-justify">
+          <h3 class="caption m-0">
+            Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z
+            Krakowa, Mielca lub okolic, chętnie się spotkam i poznam Twoje
+            oczekiwania.
+          </h3>
         </div>
         <div class="d-flex flex-column align-items-center">
           <button (click)="onClickContact()">Przejdź do kontaktu</button>
