--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,8 +4,10 @@
     <div class="row mb-5 justify-content-center">
       <div class="col-10 col-md-7 mb-5 mb-md-0">
         <img src="home/logo.svg" class="logo" alt="logo sl concept" />
-        <div class="mt-4 title img-text-shaddow">
-          Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
+        <div class="mt-4 img-text-shaddow">
+          <h2 class="title m-0">
+            Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
+          </h2>
         </div>
       </div>
     </div>
