--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -9,16 +9,22 @@
           fill
         />
       </div>
-      <div class="col-12 col-md-6 px-5 pt-md-0 pt-5 d-flex flex-column align-items-center justify-content-center">
-        <div class="title pb-3">Oferta</div>
-        <div class="pb-3 caption">
-          Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza.
-          Jedno mieszkanie można urządzić na wiele sposobów, łącząc różne style
-          i funkcje. Dlatego oferuję różnorodne opcje projektów wnętrz, które
-          pozwolą dostosować moją ofertę do Twoich indywidualnych oczekiwań. Bez
-          względu na to, jakiego efektu szukasz - minimalistycznego,
-          nowoczesnego czy klasycznego - znajdę rozwiązanie, które najlepiej
-          odpowiada Twoim potrzebom i marzeniom.
+      <div
+        class="col-12 col-md-6 px-5 pt-md-0 pt-5 d-flex flex-column align-items-center justify-content-center"
+      >
+        <div class="pb-3">
+          <h2 class="title m-0">Oferta</h2>
+        </div>
+        <div class="pb-3">
+          <h3 class="caption text-justify m-0">
+            Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza.
+            Jedno mieszkanie można urządzić na wiele sposobów, łącząc różne
+            style i funkcje. Dlatego oferuję różnorodne opcje projektów wnętrz,
+            które pozwolą dostosować moją ofertę do Twoich indywidualnych
+            oczekiwań. Bez względu na to, jakiego efektu szukasz -
+            minimalistycznego, nowoczesnego czy klasycznego - znajdę
+            rozwiązanie, które najlepiej odpowiada Twoim potrzebom i marzeniom.
+          </h3>
         </div>
         <div class="d-flex pt-3 flex-column align-items-center">
           <a [routerLink]="[offerPath]">
