--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,18 +1,25 @@
 <div class="container-fluid g-0">
   <div class="img-header-container">
-    <img class="img-header" ngSrc="offer/offer.avif" alt="Nowoczesna sypialnia z dużym łóżkiem z szarym wezgłowiem, wiszącymi lampami kulami i drewnianymi lamelami" fill />
-    <div class="text-center pt-5 header-title">Oferta</div>
+    <img
+      class="img-header"
+      ngSrc="offer/offer.avif"
+      alt="Nowoczesna sypialnia z dużym łóżkiem z szarym wezgłowiem, wiszącymi lampami kulami i drewnianymi lamelami"
+      fill
+    />
+    <div class="text-center pt-5">
+      <h1 class="header-title">Oferta</h1>
+    </div>
   </div>
   <div class="container g-0">
     <div class="row pt-4 pb-5 g-0 d-flex">
       <div class="col-12 col-md-6 px-4 border-right">
-        <div class="text-center py-4 subtitle">Projekt koncepcyjny</div>
-        <div class="caption">
+        <h2 class="text-center py-4 subtitle m-0">Projekt koncepcyjny</h2>
+        <h3 class="caption m-0">
           Jest to idealne rozwiązanie do projektowania pojedynczych pomieszczeń,
           które nie potrzebują szczegółowych rysunków technicznych, lub gdy
           Twoja ekipa remontowa potrafi przeprowadzić prace na podstawie
           prostych wytycznych.
-        </div>
+        </h3>
         <ul class="px-4 pb-1">
           <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;analiza potrzeb Klienta,</li>
           <li>
@@ -30,12 +37,12 @@
         </ul>
       </div>
       <div class="col-12 col-md-6 px-4">
-        <div class="text-center py-4 subtitle">Projekt kompleksowy</div>
-        <div class="caption">
+        <h2 class="text-center py-4 subtitle m-0">Projekt kompleksowy</h2>
+        <h3 class="caption m-0">
           To rozwiązanie najlepiej sprawdza się, gdy potrzebujesz przekazać
           szczegółową dokumentację ekipie wykończeniowej oraz chcesz mieć
           dokładną listę wyposażenia wnętrza wraz z wiedzą, gdzie je kupić.
-        </div>
+        </h3>
         <ul class="px-4">
           <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;analiza potrzeb Klienta,</li>
           <li>
