--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -1,32 +1,49 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="d-flex flex-column align-items-center p-5 ps-md-0 pe-md-0">
-      <div class="col-12 text-center title">
-        PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA
+    <div class="d-flex flex-column align-items-center p-5 pt-4 ps-md-0 pe-md-0">
+      <div class="col-12 text-center">
+        <h2 class="title">PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA</h2>
       </div>
-      <div class="col-12 pt-3 text-center caption">
-        Stworzę dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
-        estetykę z funkcjonalnością w spójną i zachwycającą całość
+      <div class="col-12 text-center">
+        <h3 class="caption m-0">
+          Stworzę dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
+          estetykę z funkcjonalnością w spójną i zachwycającą całość
+        </h3>
       </div>
       <div class="row col-12 py-4 justify-content-center">
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <a [routerLink]="portfolioPath">
             <div class="img-preview-container">
-              <img class="img-preview pointer-scale" ngSrc="portfolio-preview/2.avif" alt="Stylowy salon vintage z żółtym narożnikiem, meblami nawiązującymi do prl, panelem ściennym i kinkietami" fill />
+              <img
+                class="img-preview pointer-scale"
+                ngSrc="portfolio-preview/2.avif"
+                alt="Stylowy salon vintage z żółtym narożnikiem, meblami nawiązującymi do prl, panelem ściennym i kinkietami"
+                fill
+              />
             </div>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <a [routerLink]="portfolioPath">
             <div class="img-preview-container">
-              <img class="img-preview pointer-scale" ngSrc="portfolio-preview/1.avif" alt="Nowoczesna kuchnia vintage z czarnymi oraz ciemnymi zielonymi szafkami, białymi płytkami cegiełkami, drewnianym stołem i wiklinowymi krzesłami" fill />
+              <img
+                class="img-preview pointer-scale"
+                ngSrc="portfolio-preview/1.avif"
+                alt="Nowoczesna kuchnia vintage z czarnymi oraz ciemnymi zielonymi szafkami, białymi płytkami cegiełkami, drewnianym stołem i wiklinowymi krzesłami"
+                fill
+              />
             </div>
           </a>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <a [routerLink]="portfolioPath">
             <div class="img-preview-container">
-              <img class="img-preview pointer-scale" ngSrc="portfolio-preview/3.avif" alt="Jasna, nowoczesna łazienka w odcieniach beżu z drewnianymi elementami, ryflowanymi płytkami, owalnym lustrem, kinkietami kulami oraz płytkami lastryko" fill />
+              <img
+                class="img-preview pointer-scale"
+                ngSrc="portfolio-preview/3.avif"
+                alt="Jasna, nowoczesna łazienka w odcieniach beżu z drewnianymi elementami, ryflowanymi płytkami, owalnym lustrem, kinkietami kulami oraz płytkami lastryko"
+                fill
+              />
             </div>
           </a>
         </div>
