--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,11 +27,11 @@ body {
   letter-spacing: 2px;
 }
 
-.title-large {
-  font-size: 2.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-}
+// .title-large {
+//   font-size: 2.5rem;
+//   font-weight: 700;
+//   text-transform: uppercase;
+// }
 
 .subtitle {
   font-size: 1.1rem;
@@ -47,7 +47,10 @@ body {
 }
 
 .italic {
+  font-size: 1rem;
+  line-height: 1.5rem;
   font-style: italic;
+  font-weight: 300;
 }
 
 .text-center {
